@@ -167,7 +167,7 @@ PARSER_END(JavaParser)
 
 TOKEN_MGR_DECLS :
 {
-    protected List<Token> formalComments = new ArrayList<Token>();
+    protected List<Comment> comments = new ArrayList<Comment>();
 }
 
 /* WHITE SPACE */
@@ -185,6 +185,7 @@ SPECIAL_TOKEN :
         if (startOfNOPMD != -1) {
             suppressMap.put(matchedToken.beginLine, matchedToken.image.substring(startOfNOPMD + suppressMarker.length()));
         }
+        comments.add(new SingleLineComment(matchedToken));
     }
 }
 
@@ -200,13 +201,13 @@ MORE :
 <IN_FORMAL_COMMENT>
 SPECIAL_TOKEN :
 {
-  <FORMAL_COMMENT: "*/" > { formalComments.add(matchedToken); } : DEFAULT
+  <FORMAL_COMMENT: "*/" > { comments.add(new FormalComment(matchedToken)); } : DEFAULT
 }
 
 <IN_MULTI_LINE_COMMENT>
 SPECIAL_TOKEN :
 {
-  <MULTI_LINE_COMMENT: "*/" > : DEFAULT
+  <MULTI_LINE_COMMENT: "*/" > { comments.add(new MultiLineComment(matchedToken)); } : DEFAULT
 }
 
 <IN_FORMAL_COMMENT,IN_MULTI_LINE_COMMENT>
@@ -1073,7 +1074,7 @@ ASTCompilationUnit CompilationUnit() :
   ( < "~[]" > )?
   <EOF>
 {
- jjtThis.setFormalComments(token_source.formalComments);
+ jjtThis.setComments(token_source.comments);
  return jjtThis;
 }
 }
