@@ -1,0 +1,9 @@
+package net.sourceforge.pmd.lang.java.ast;
+
+public class MultiLineComment extends Comment {
+
+    public MultiLineComment(Token t) {
+        super(t);
+    }
+
+}
